Add gogo example